--- a/SadaPayTask/SadaPayTask/GithubRepositories/Views/GitHubRepositoriesTableViewCell.xib
+++ b/SadaPayTask/SadaPayTask/GithubRepositories/Views/GitHubRepositoriesTableViewCell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="182" id="HNv-Sw-ffc" customClass="GitHubRepositoriesTableViewCell" customModule="SadaPayTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="620" height="182"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="292" id="HNv-Sw-ffc" customClass="GitHubRepositoriesTableViewCell" customModule="SadaPayTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="663" height="292"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HNv-Sw-ffc" id="s7x-dm-TFG">
-                <rect key="frame" x="0.0" y="0.0" width="620" height="182"/>
+                <rect key="frame" x="0.0" y="0.0" width="663" height="292"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zhY-em-xdW">
@@ -28,10 +28,10 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="4jQ-iA-rdD">
-                        <rect key="frame" x="78" y="20" width="534" height="154"/>
+                        <rect key="frame" x="78" y="20" width="577" height="264"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d63-Fn-xZT" userLabel="Name">
-                                <rect key="frame" x="0.0" y="0.0" width="534" height="20.333333333333332"/>
+                                <rect key="frame" x="0.0" y="0.0" width="577" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rhn-Dk-jLB">
-                                <rect key="frame" x="0.0" y="133.66666666666666" width="534" height="20.333333333333343"/>
+                                <rect key="frame" x="0.0" y="120.99999999999999" width="577" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -61,7 +61,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgn-T8-8za">
-                                <rect key="frame" x="0.0" y="154" width="534" height="0.0"/>
+                                <rect key="frame" x="0.0" y="148.33333333333334" width="577" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -69,15 +69,15 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfp-C7-deI">
-                                <rect key="frame" x="0.0" y="154" width="534" height="22"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfp-C7-deI">
+                                <rect key="frame" x="0.0" y="242" width="577" height="22"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="T3i-Pw-Ghe">
                                         <rect key="frame" x="0.0" y="0.0" width="67.333333333333329" height="18"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hor-Rw-HZr">
                                                 <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
-                                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                <color key="backgroundColor" systemColor="tintColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="18" id="8zg-oA-GCi"/>
                                                     <constraint firstAttribute="width" constant="18" id="wG9-f8-9wU"/>
@@ -92,7 +92,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-DJ-opl">
-                                        <rect key="frame" x="446.66666666666663" y="0.0" width="67.333333333333371" height="18"/>
+                                        <rect key="frame" x="489.66666666666657" y="0.0" width="67.333333333333314" height="18"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="NcY-lq-nue">
                                                 <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
@@ -144,7 +144,7 @@
                 <outlet property="starImageView" destination="NcY-lq-nue" id="dtG-Aj-4LV"/>
                 <outlet property="stargazerCountsView" destination="Qc9-DJ-opl" id="NhO-GP-Hcm"/>
             </connections>
-            <point key="canvasLocation" x="474.80916030534348" y="67.605633802816911"/>
+            <point key="canvasLocation" x="507.63358778625951" y="106.33802816901409"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -152,8 +152,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
